# opengl-rust-examples

./: .gitignore  Cargo.toml  README.adoc  README.md  build.rs
.github/workflows/: rust-clippy.yml
assets/atmospheric_scattering/shaders/: cube.vert  planet.frag  sky.frag
assets/bruteforce_terrain/shaders/: terrain.frag  terrain.geom  terrain.vert
assets/hello_triangle/shaders/: triangle.frag  triangle.vert
assets/shaders/: basic.vert  cube.vert  imgui.vert  triangle.frag  triangle.vert
assets/simple_raytracer/shaders/: main.comp
assets/sobel_cube/shaders/: basic.frag  basic.vert  cube.frag  cube.vert
assets/tessellation/shaders/: basic.frag  basic.tesc  basic.tese  basic.vert
binaries/atmospheric_scattering/: Cargo.toml
binaries/atmospheric_scattering/assets/shaders/: cube.vert  planet.frag  sky.frag
binaries/atmospheric_scattering/src/: main.rs  state.rs
binaries/bruteforce_terrain/: Cargo.toml
binaries/bruteforce_terrain/assets/shaders/: terrain.frag  terrain.geom  terrain.vert
binaries/bruteforce_terrain/src/: camera.rs  chunk.rs  main.rs  state.rs  terrain_mesh.rs
binaries/hello_triangle/: Cargo.toml  build.rs
binaries/hello_triangle/assets/shaders/: triangle.frag  triangle.vert
binaries/hello_triangle/src/: main.rs  state.rs
binaries/planet_renderer/: Cargo.toml
binaries/planet_renderer/assets/shaders/: planet.frag  planet.geom  planet.vert
binaries/planet_renderer/src/: frustum.rs  main.rs  movable.rs  planet.rs  polyhedron.rs  state.rs
binaries/planet_renderer/src/camera/: mod.rs  perspective_camera.rs
binaries/simple_raytracer/: Cargo.toml
binaries/simple_raytracer/src/: main.rs  state.rs
binaries/sobel_cube/: Cargo.toml
binaries/sobel_cube/assets/shaders/: basic.frag  basic.vert  cube.frag  cube.vert
binaries/sobel_cube/src/: main.rs  state.rs
binaries/terrain/: Cargo.toml
binaries/terrain/src/: main.rs
binaries/tessellation/: Cargo.toml
binaries/tessellation/assets/shaders/: basic.frag  basic.tesc  basic.tese  basic.vert
binaries/tessellation/src/: main.rs  state.rs
learnopengl/01-getting-started/01-hello-window/: Cargo.toml
learnopengl/01-getting-started/01-hello-window/src/: main.rs
learnopengl/01-getting-started/02-hello-triangle/: Cargo.toml
learnopengl/01-getting-started/02-hello-triangle/assets/: triangle.frag
learnopengl/01-getting-started/02-hello-triangle/src/: main.rs
learnopengl/01-getting-started/03-shaders/: Cargo.toml
learnopengl/01-getting-started/03-shaders/src/: main.rs
learnopengl/01-getting-started/04-textures/: Cargo.toml
learnopengl/01-getting-started/05-transformations/: Cargo.toml
learnopengl/01-getting-started/06-coordinate-systems/: Cargo.toml
learnopengl/01-getting-started/07-camera/: Cargo.toml
learnopengl/02-lighting/01-colors/: Cargo.toml
learnopengl/02-lighting/02-basic-lighting/: Cargo.toml
learnopengl/02-lighting/03-materials/: Cargo.toml
learnopengl/02-lighting/04-lighting-maps/: Cargo.toml
learnopengl/02-lighting/05-light-casters/: Cargo.toml
learnopengl/02-lighting/06-multiple-lights/: Cargo.toml
learnopengl/03-model-loading/01-mesh/: Cargo.toml
learnopengl/03-model-loading/01-mesh/assets/: cube.frag
learnopengl/03-model-loading/01-mesh/assets/backpack/: backpack.mtl
learnopengl/03-model-loading/01-mesh/src/: camera.rs  main.rs  mesh.rs  model.rs  texture.rs  vertex.rs
learnopengl/getting-started/camera/: Cargo.toml
learnopengl/getting-started/coordinate-systems/: Cargo.toml
learnopengl/getting-started/hello-triangle/: Cargo.toml
learnopengl/getting-started/hello-window/: Cargo.toml
learnopengl/getting-started/shaders/: Cargo.toml
learnopengl/getting-started/textures/: Cargo.toml
learnopengl/getting-started/transformations/: Cargo.toml
learnopengl/lighting/basic-lighting/: Cargo.toml
learnopengl/lighting/colors/: Cargo.toml
learnopengl/lighting/light-casters/: Cargo.toml
learnopengl/lighting/lighting-maps/: Cargo.toml
learnopengl/lighting/materials/: Cargo.toml
learnopengl/lighting/multiple-lights/: Cargo.toml
learnopengl/model-loading/mesh/: Cargo.toml
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/imgui_display/: Cargo.toml
lib/imgui_display/src/: lib.rs
lib/imgui_display_derive/: Cargo.toml
lib/imgui_display_derive/src/: lib.rs
libraries/gl_bindings/: Cargo.toml  build.rs
libraries/gl_bindings/src/: access_type.rs  capabilities.rs  debug.rs  error.rs  image_format.rs  lib.rs  pixel_format.rs  pixel_type.rs  program.rs  shader.rs  state.rs  vertex_array.rs  vertex_attrib.rs
libraries/gl_bindings/src/buffer/: buffer_id.rs  buffer_target.rs  buffer_usage.rs  mod.rs  storage_flags.rs
libraries/gl_bindings/src/framebuffer/: attachment.rs  framebuffer_id.rs  framebuffer_status.rs  framebuffer_target.rs  mod.rs  renderbuffer_id.rs  renderbuffer_target.rs
libraries/gl_bindings/src/rendering/: clear_mask.rs  draw_mode.rs  mod.rs
libraries/gl_bindings/src/texture/: mod.rs  texture_id.rs  texture_parameter.rs  texture_target.rs  texture_unit.rs
libraries/gl_bindings_raw_handle_derive/: Cargo.toml
libraries/gl_bindings_raw_handle_derive/src/: lib.rs
libraries/learnopengl-utils/: Cargo.toml
libraries/learnopengl-utils/src/: lib.rs
libraries/renderer/: Cargo.toml
libraries/renderer/src/: application.rs  imgui.frag  imgui_wrapper.rs  input_manager.rs  lib.rs  mouse_buttons.rs  renderer_context.rs  resources.rs  time.rs
libraries/renderer/src/imgui_impl/: mod.rs
libraries/renderer/src/imgui_impl/shaders/: imgui.frag  imgui.vert
libraries/renderer/src/input_manager/: key.rs  key_helpers.rs  mod.rs  sdl_input_manager.rs
libraries/renderer/src/renderer/: buffer.rs  program.rs  render_pass.rs  shader.rs  texture.rs  vertex_attribute.rs
libraries/renderer/src/time/: duration_since.rs  mod.rs  now.rs
src/: imgui.frag  imgui.vert  imgui_wrapper.rs  key_codes.rs  lib.rs  main.rs  renderer_context.rs  resources.rs  triangle.frag  triangle.vert
src/renderer/: buffer.rs  mod.rs  program.rs  render_pass.rs  shader.rs  texture.rs  vertex_attribute.rs
(+52 files in other folders)
