[workspace]
members = ["libraries/*", "binaries/hello_triangle"]
resolver = "2"

[workspace.dependencies]
gl_bindings = { path = "libraries/gl_bindings" }
renderer = { path = "libraries/renderer" }
sdl2 = { version = "0.36.0", features = ["bundled", "static-link"] }
anyhow = "1.0.70"
walkdir = "2.4.0"
nalgebra-glm = "0.18.0"
imgui = "0.11.0"
noise = "0.8.2"
