[workspace]
members = [
    "libraries/*",
    "binaries/*",
    "learnopengl/*/*"
]
resolver = "2"

[workspace.dependencies]
gl_bindings = { path = "libraries/gl_bindings" }
gl_bindings_raw_handle_derive = { path = "libraries/gl_bindings_raw_handle_derive" }
opengl-rs = { git = "https://github.com/platc2/opengl-rs" }
renderer = { path = "libraries/renderer" }
sdl2 = { version = "0.37.0", features = ["static-link", "bundled"] }
anyhow = "1.0.70"
walkdir = "2.4.0"
nalgebra-glm = "0.19.0"
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
# imgui = "0.12.0"
noise = "0.9.0"
stb_image = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
russimp = { version = "3.2.0", features = ["prebuilt"] }
learnopengl-utils = { path = "libraries/learnopengl-utils" }
