[package]
name = "atmospheric_scattering"
description = "Example application showing atmospheric (rayleigh and mie) scattering"
repository = "https://github.com/platc2/opengl-rust"
keywords = ["OpenGL", "Rust"]
version = "0.1.0"
edition = "2021"

[build-dependencies]
walkdir.workspace = true

[dependencies]
sdl2.workspace = true
gl_bindings.workspace = true
renderer.workspace = true
anyhow.workspace = true
imgui.workspace = true
nalgebra-glm.workspace = true
