[package]
name = "tessellation"
description = "Example cube application showing OpenGL's tessellation"
repository = "https://github.com/platc2/opengl-rust"
keywords = ["OpenGL", "Rust"]
version = "0.1.0"
edition = "2021"

[build-dependencies]
walkdir.workspace = true

[dependencies]
sdl2.workspace = true
gl_bindings.workspace = true
renderer.workspace = true
anyhow.workspace = true
nalgebra-glm.workspace = true
