[package]
name = "renderer"
description = "Some simple renderer library with utilities"
repository = "https://github.com/platc2/opengl-rust"
keywords = ["OpenGL", "Rust"]
version = "0.1.0"
edition = "2021"

[dependencies]
gl_bindings.workspace = true
sdl2.workspace = true
imgui = "0.11.0"
thiserror = "1.0.56"
stb_image = "0.3.0"
nalgebra-glm = "0.18.0"
anyhow.workspace = true
