[package]
name = "renderer"
description = "Some simple renderer library with utilities"
repository = "https://github.com/platc2/opengl-rust"
keywords = ["OpenGL", "Rust"]
version = "0.1.0"
edition = "2021"

[features]
default = ["imgui"]
imgui = ["dep:imgui"]

[dependencies]
imgui = { workspace = true, optional = true }
gl_bindings = { workspace = true, features = ["GL45"] }
opengl-rs = { workspace = true, features = ["GL45"] }
sdl2.workspace = true
anyhow.workspace = true
nalgebra-glm.workspace = true
stb_image.workspace = true
thiserror = "1.0.56"
