[package]
name = "mesh"
version = "0.1.0"
edition = "2021"

[build-dependencies]
walkdir.workspace = true

[dependencies]
renderer.workspace = true
anyhow.workspace = true
nalgebra-glm.workspace = true
imgui.workspace = true
russimp.workspace = true
learnopengl-utils.workspace = true
